<!--<!DOCTYPE resources [<!ELEMENT resources (string|string-array)*><!ELEMENT string (#PCDATA)><!ATTLIST stringname CDATA #REQUIRED><!ELEMENT string-array (item)*><!ATTLIST string-arrayname CDATA #REQUIRED><!ELEMENT item (#PCDATA)>]>
-->
<resources>
    <string name="app_name">Simple Timed To Do List</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Main Activity -->
    <string name="default_timer_text">00:00:00</string>
    <string name="disabled_timer_text">--:--:--</string>
    <string name="btn_text_add"> + </string>
    <string name="btn_text_confirm">confirm!</string>
    <string name="btn_text_reset">reset!</string>
    <string name="btn_text_finished">Finished?</string>
    <string name="Times_Up">Times Up!</string>


    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="theme">Customize theme</string>
    <string name="prev_lists">Previous Lists</string>
    <string name="setting_time_remaining">Show Time Remaining in a Notification (Requires Android 7.0 or higher)</string>
    <string name="setting_time_finished">Send Time Finished Notification</string>
    <string name="setting_finished_sound">Play Sound For Times Finished Notification</string>
    <string name="setting_add_task">Add tasks to list after confirmed</string>
    <string name="setting_edit_task">Edit tasks on list after confirmed</string>
    <string name="setting_no_timer">Disable the timer</string>
    <string name="setting_add_time">Add time to timer after list confirmed</string>
    <string name="setting_change_task_max">Change the max number of tasks</string>
    <string name="setting_btn_restore">Restore Default</string>
    <string name="setting_btn_save">Save Settings</string>


    <string-array name="items_for_max_tasks_spinner">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <!-- these examples are not necessary -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
